objects/EOF_CV_TRACCIAMENTO_VENDIBILITA__c.object
<CustomObject>
    <fields>
        <fullName>Codice_Motivazione__c</fullName>
        <label>Codice Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esito__c</fullName>
        <label>Esito</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_request__c</fullName>
        <label>ID_request</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivazione__c</fullName>
        <label>Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>olo__c</fullName>
        <label>olo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>servizio__c</fullName>
        <label>servizio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EOF_CV_TRACCIAMENTO_VENDIBILITA</label>
    <nameField>
        <label>EOF_CV_TRACCIAMENTO_VENDIBILITA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOF_CV_TRACCIAMENTO_VENDIBILITA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>